# auth/src/main/java/ru/imageprocessing/auth/controller/AuthController.java
@@ -11,24 +11,23 @@ import ru.imageprocessing.auth.api.dto.LoginRequest;
 import ru.imageprocessing.auth.api.dto.RefreshTokenRequest;
 import ru.imageprocessing.auth.api.dto.TokenValidationResponse;
 import ru.imageprocessing.auth.api.dto.ValidateTokenRequest;
+import ru.imageprocessing.auth.service.Auth;
 
 @RequiredArgsConstructor
 @Slf4j
 @RestController
-@RequestMapping(path = "/api/v1/auth")
+@RequestMapping(path = "/api/v1")
 public class AuthController implements AuthApi {
+
+    private final Auth auth;
+
     @Override
     public ResponseEntity<AuthResponse> authLoginPost(LoginRequest loginRequest) {
-        return null;
+        return ResponseEntity.ok(auth.login(loginRequest));
     }
 
     @Override
     public ResponseEntity<AuthResponse> authRefreshPost(RefreshTokenRequest refreshTokenRequest) {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<TokenValidationResponse> authValidatePost(ValidateTokenRequest validateTokenRequest) {
-        return null;
+        return ResponseEntity.ok(auth.refreshToken(refreshTokenRequest.getRefreshToken()));
     }
 }
